<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwEng2013QuizApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="random_question">Show a random question</string>
    <string name="submit_question">Submit a quiz question</string>
    <string name="title_activity_show_questions">ShowQuestionsActivity</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="edit_question">Type in the question\'s text body</string>
    <string name="submit_button">Submit</string>
    <string name="edit_tags">Type in the question\'s tags</string>
    <string name="edit_answer">Type in the answer</string>
    <string name="heavy_ballot_x">✘</string>
    <string name="heavy_check_mark">✔</string>
    <string name="hyphen_minus">-</string>
    <string name="plus_sign">+</string>
    <string name="next_question">Next question</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="GASPAR_username">GASPAR Username</string>
    <string name="GASPAR_Password">GASPAR Password</string>
    <string name="log_in">Log in using Tequila</string>
    <string name="offline">Offline mode</string>
    <string name="cache_service_name">CacheManagerService</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="query_hint">Type in the search query</string>
    <string name="search_text">Search</string>
    <string name="search_question">Search for a question</string>

</resources>