<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".EditQuestionActivity" >

    <EditText
        android:id="@+id/edit_questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_question" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_answerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_answer" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_tagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/edit_tags" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="initialState"
        android:text="@string/submit_button" />

</RelativeLayout>