<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthenticationActivity" >

    <EditText
<<<<<<< HEAD
        android:id="@+id/GASPAR_username"
=======
        android:id="@+id/GasparUsername_EditText"
>>>>>>> 93a6ac63a6ea9dff740ce92ab3447eda045c22fd
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/GASPAR_username" >
    </EditText>

    <EditText
<<<<<<< HEAD
        android:id="@+id/GASPAR_Password"
=======
        android:id="@+id/GasparPassword_EditText"
>>>>>>> 93a6ac63a6ea9dff740ce92ab3447eda045c22fd
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/GASPAR_Password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:onClick="logIn"
        android:text="@string/log_in" />

</LinearLayout>